MuscleUp - Raspberry Pi/cron_log.txt
Unable to init server: Could not connect: Connection refused
Unable to init server: Could not connect: Connection refused

(starterController.py:536): Gdk-CRITICAL **: 19:39:00.647: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed

(starterController.py:536): Gdk-CRITICAL **: 19:39:00.665: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed
INFO: Created TensorFlow Lite XNNPACK delegate for CPU.
Unable to init server: Could not connect: Connection refused
Traceback (most recent call last):
  File "/home/pi/Documents/MuscleUp/starterController.py", line 4, in <module>
    from MuscleUp import *
  File "/home/pi/Documents/MuscleUp/MuscleUp.py", line 545
    break"""
           ^
SyntaxError: invalid syntax
